--- a/alembic.ini
+++ b/alembic.ini
@@ -108,3 +108,7 @@ formatter = generic
 [formatter_generic]
 format = %(levelname)-5.5s [%(name)s] %(message)s
 datefmt = %H:%M:%S
+
+[develop-sqlite]
+script_location = migrations
+sqlalchemy.url = sqlite:///./atc_game.db
