--- a/alembic.ini
+++ b/alembic.ini
@@ -1,4 +1,4 @@
-# A generic, single database configuration.
+# A generic, single data_management configuration.
 
 [alembic]
 # path to migration scripts
